# orphan-domains

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/afdb/index/: swissprot_accessions.txt
data/pfam/: PFAM_VERSION.txt
docs/: DATA_PRODUCT.md  PIPELINE.md  baseline_env.txt  dataset_versions.yaml
scripts/: apply_edge_case_overrides.py  build_pfam_ga_table.py  build_reference_manifest.py  check_cluster_sizes.py  check_sequence_structure_consistency.py  cluster_orphanZ70.sh  cluster_strict26k.sh  collect_confidence_data.py  compile_architecture_strings.py  compile_cluster_outputs.py  compile_domain_annotations.py  compile_domain_annotations_final.py  compile_orphan_datasets.py  compile_orphan_sets.py  compute_pfam_coverage.py  emit_preliminary_segments.py  enforce_min_fragment_length.py  extract_sequences.py  extract_structure_features.py  fetch_afdb_pae.sh  finalize_domain_architecture.py  find_low_plddt_regions.py  make_orphan_zero_struct70.py  monitor_byacc_manifest.sh  monitor_extract_sequences.sh  monitor_hmmscan.sh  monitor_manifest.sh  monitor_pae.sh  organize_by_acc.sh  parse_hmmscan_domtbl.py  prepare_structure_workspace.py  process_hmmscan_hits.py  qc_orphan_candidates.py  refine_segments_with_pae.py  resolve_domain_overlaps.py  run_hmmscan.sh  sanity_step1.sh  segment_by_plddt_cuts.py  select_cluster_representatives.py  select_orphan_candidates.py  (+6 more)
src/orphan/: __init__.py  cli.py  config.py  ids.py  logging_utils.py
src/orphan_domains.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+36 files in other folders)
